tdf#99573 uiwriter: clear RES_BACKGROUND -> XATTR_FILL_*

The paragraph background wasn't being cleared when hard formatting
was removed (unless roundtripped via .ODT only) because
a couple of years ago RES_BACKGROUND was aliased to
XATTR_FILL, but lots of edge cases are still missed.

Perhaps there is a more generic place to handle "reset attribute",
but I didn't find it. SwFormat is where most of the aliasing
is happening.

Change-Id: I9d0a3c70f03f0a5b22155e689e27e3372535aec6
Reviewed-on: https://gerrit.libreoffice.org/65609
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>