sw/source/core/txtnode/ndtxt.cxx
@@ -5026,6 +5026,8 @@ namespace {
                 }
                 else if ( rWhich == RES_PARATR_OUTLINELEVEL )
                     mrTextNode.ResetEmptyListStyleDueToResetOutlineLevelAttr();
+                else if ( rWhich == RES_BACKGROUND )
+                    mrTextNode.ResetAttr( XATTR_FILL_FIRST, XATTR_FILL_LAST );
 
                 if ( !bRemoveFromList )
                 {
